fix(chatty): Performance tuning.
For truncated posts, show only 10 recent replies in flat mode. Scroll adjustments happen in $timeout instead of immediate (seems to fix blippy scrolls).

--- a/src/main/comments/truncate.css
+++ b/src/main/comments/truncate.css
@@ -1,16 +1,3 @@
-.truncated .rootPost {
-    margin-bottom: 0;
-}
-.truncated .threadContainer {
-    height: 264px;
-    overflow: hidden;
-    position: relative;
-}
-.truncated .treeview {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-}
 .threadCapHeader {
     color: #aeae9b;
     font-size: 12px;
